<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.displayview.view.PopupStackLayout
        android:id="@+id/jeejio_popup_stack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <RelativeLayout
        android:id="@+id/jeejio_popup_help_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jeejio_popup_guide_bg_color"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/jeejio_popup_guide_top"
            android:layout_centerHorizontal="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/jeejio_popup_guide_left_icon"
                    android:layout_width="@dimen/jeejio_popup_guide_width"
                    android:layout_height="@dimen/jeejio_popup_guide_height"
                    android:background="@drawable/jeejio_popup_slide_left" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/jeejio_popup_guide_width"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/jeejio_popup_guide_txt_color"
                    android:text="@string/jeejio_popup_str_slide_left"
                    android:textSize="@dimen/jeejio_popup_guide_text_size"
                    android:layout_below="@+id/jeejio_popup_guide_left_icon"
                    android:layout_marginTop="@dimen/jeejio_popup_guide_margin_top"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/jeejio_popup_guide_left">

                <ImageView
                    android:id="@+id/jeejio_popup_guide_up_icon"
                    android:layout_width="@dimen/jeejio_popup_guide_width"
                    android:layout_height="@dimen/jeejio_popup_guide_height"
                    android:background="@drawable/jeejio_popup_slide_up"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/jeejio_popup_guide_width"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/jeejio_popup_guide_txt_color"
                    android:text="@string/jeejio_popup_str_slide_up"
                    android:textSize="@dimen/jeejio_popup_guide_text_size"
                    android:layout_below="@+id/jeejio_popup_guide_up_icon"
                    android:layout_marginTop="@dimen/jeejio_popup_guide_margin_top"/>
            </RelativeLayout>


        </RelativeLayout>
        <Button
            android:id="@+id/jeejio_popup_know_bt"
            android:layout_width="@dimen/jeejio_popup_know_width"
            android:layout_height="@dimen/jeejio_popup_know_height"
            android:text="@string/jeejio_popup_str_know"
            android:background="@drawable/jeejio_popup_know_bg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/jeejio_popup_know_color"
            android:layout_marginBottom="@dimen/jeejio_popup_know_bottom"
            android:textSize="@dimen/jeejio_popup_know_size"/>
    </RelativeLayout>
</FrameLayout>
