<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jeejio_popup_layout_br"
    android:layout_gravity="center">
    <RelativeLayout
        android:id="@+id/jeejio_popup_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:layout_width="@dimen/jeejio_popup_loading_icon_width"
            android:layout_height="@dimen/jeejio_popup_loading_icon_height"
            android:src="@drawable/jeejio_popup_loading_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/jeejio_popup_loading_icon_top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/jeejio_popup_loading_text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/jeejio_popup_loading_text_top"
            android:text="@string/jeejio_popup_str_loading"
            android:textColor="@color/jeejio_popup_loading_txt_color"/>
        <ImageView
            android:id="@+id/jeejio_popup_loading_gifview"
            android:layout_width="@dimen/jeejio_popup_loading_process_width"
            android:layout_height="@dimen/jeejio_popup_loading_process_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/jeejio_popup_loading_process_top"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/jeejio_popup_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:layout_width="@dimen/jeejio_popup_error_icon_width"
            android:layout_height="@dimen/jeejio_popup_error_icon_height"
            android:src="@drawable/jeejio_popup_error_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/jeejio_popup_error_top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/jeejio_popup_error_text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/jeejio_popup_error_text_top"
            android:text="@string/jeejio_popup_str_error"
            android:textColor="@color/jeejio_popup_error_txt_color"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/jeejio_popup_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:visibility="invisible"/>
    <com.example.displayview.view.IjkVideoView
        android:id="@+id/jeejio_popup_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:background="@drawable/jeejio_popup_title_bg"
        android:layout_height="@dimen/jeejio_popup_title_height">
        <ImageView
            android:id="@+id/jeejio_popup_icon"
            android:layout_width="@dimen/jeejio_popup_title_icon_width"
            android:layout_height="@dimen/jeejio_popup_title_icon_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/jeejio_popup_title_icon_left"
            android:src="@drawable/jeejio_popup_picture"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/jeejio_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/jeejio_popup_title_tx_max"
            android:text="@string/jeejio_popup_title_unknow"
            android:textColor="@color/jeejio_popup_title_color"
            android:textSize="@dimen/jeejio_popup_title_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/jeejio_popup_title_tx_left"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_toRightOf="@+id/jeejio_popup_icon"/>
        <TextView
            android:id="@+id/jeejio_popup_timer"
            android:textSize="@dimen/jeejio_popup_timer_size"
            android:layout_width="@dimen/jeejio_popup_timer_width"
            android:layout_height="@dimen/jeejio_popup_timer_height"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textColor="@color/jeejio_popup_timer_color"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/jeejio_popup_timer_right"
            android:background="@drawable/jeejio_popup_timer_bg"
            android:visibility="gone"/>
    </RelativeLayout>


</FrameLayout>
